# MolCrysKit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  Dockerfile  Dockerfile.bohrium  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-ghcr.yml  publish-pypi.yml  release.yml  unit-tests.yml
docs/: api.md  api_reference.md  architecture.md  cli.md  docker.md  implementation_summary.md  tutorials.md
examples/: BRCRIM10.cif  Cu.cif  Diamond.cif  P1_molecule.cif  SUXRUA.cif  SiO2.cif  disorder_enumeration.py  example_cubic_disorder.cif  extract_molecules.py  rotate_molecule.py
molcrys/: __init__.py
molcrys.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
molcrys/analysis/: __init__.py  interactions.py  species.py
molcrys/analysis/disorder/: generator.py  ranker.py  scanner.py
molcrys/constants/: __init__.py  atomic_radii.json
molcrys/io/: __init__.py  cif.py  output.py
molcrys/operations/: builders.py  perturbation.py  rotation.py
molcrys/structures/: __init__.py  crystal.py  molecule.py
molcrys/utils/: geometry.py
molcrys_kit/: __init__.py  __main__.py
molcrys_kit/analysis/: __init__.py  charge.py  chemical_env.py  cluster_invariants.py  cluster_provenance.py  formula_moiety.py  heuristics.py  interactions.py  molecular_identity.py  packing_shell.py  sanity_check.py  shape.py  species.py  stoichiometry.py  volume.py
molcrys_kit/analysis/disorder/: __init__.py  diagnostics.py  edge_priority.py  generator.py  graph.py  info.py  predicates.py  process.py  provenance.py  ranker.py  scanner.py  solver.py
molcrys_kit/analysis/interactions/: __init__.py  base.py  bonding.py  ch_pi.py  geometry.py  h_h_contact.py  halogen_bond.py  hydrogen_bond.py  identity.py  local_geometry.py  pi_stacking.py  profile.py  scoring.py
molcrys_kit/cli/: __init__.py  _common.py  analyze_cmd.py  io_cmd.py  operate_cmd.py
molcrys_kit/constants/: __init__.py  atomic_masses.json  atomic_radii.json  config.py  vdw_radii.json
molcrys_kit/io/: __init__.py  cif.py  extxyz.py  output.py  poscar.py  xyz.py
molcrys_kit/operations/: __init__.py  builders.py  cluster.py  defects.py  desolvation.py  hydrogen_completion.py  hydrogenation.py  interpolation.py  molecule_manipulation.py  path_smoothing.py  perturbation.py  reorientation.py  rotation.py  surface.py
molcrys_kit/structures/: __init__.py  atom.py  cluster.py  crystal.py  molecule.py  polyhedra.py  trajectory.py
molcrys_kit/utils/: __init__.py  geometry.py  graph.py
notebook/: molcryskit.ipynb  polyhedra_gallery.ipynb
notebook/example/H_lacking_structures/: IBPRAC_ibuprofen.cif  MAP.cif
notebook/example/disordered_structures/: DAP-4.cif  TILPEN.cif  (+3 more)
notebooks/: polyhedra_gallery.ipynb
paper/: README.md
paper/csd_statistics/: README.md  csd_statistics.py  plot_csd_results.py
paper/qm9_benchmark/: README.md  plot_qm9_analysis.py  validate_hybridization_qm9_real.py
paper/slab_benchmark/: README.md  multi_system_benchmark.py  plot_benchmark.py
plans/: disorder_status.md
scripts/: README.md  atomic_properties_demo.py  bench_disorder_modes.py  carve_cluster.py  complete_molecule_center_analyzer.py  demo_csd_disorder_workflow.py  demo_custom_bond_thresholds.py  diagnose_valence.py  disorder_enumeration.py  docker-test.sh  docker_smoke_test.py  dump_disorder_modes.py  enhanced_molecule_example.py  extract_molecules.py  hydrogenate_molecule.py  identify_molecules.py  improved_molecule_center_analyzer.py  lattice_parameters_demo.py  molecular_centroids.py  molecule_center_analyzer.py  molecule_center_analyzer_with_ase.py  process_disordered_structures.py  repro_implicit_nh4.py  rotate_molecule.py  test_atomic_properties.py  test_defect.py  test_desolvation.py  test_h_completion.py  test_hydrogenation.py  test_map_hydrogenation.py  test_metal_bonding.py  test_topological_slab.py  visualize_disorder_graphs.py  visualize_disorder_partialgraphs.py
tests/: conftest.py  test_cif_parsing.py
tests/data/: test_full_coords.cif
tests/dev/: test_phase1_io.py
tests/integration/: test_disorder_workflow.py
tests/unit/: README.md  test_analysis.py  test_analysis_interactions.py  test_analysis_species.py  test_asu_first_molecule_identification.py  test_cif_text_in_memory.py  test_cli.py  test_cluster_carver.py  test_constants.py  test_defects.py  test_disorder.py  test_disorder_extxyz.py  test_disorder_extxyz_roundtrip.py  test_disorder_graph.py  test_disorder_provenance.py  test_disorder_regression.py  test_disorder_repair.py  test_docs_api_sync.py  test_extxyz.py  test_formula_filter.py  test_formula_moiety.py  test_frac_coords_preservation.py  test_geometry.py  test_graph_logic.py  test_hydrogen_completion_regression.py  test_interpolation.py  test_io_cif.py  test_io_output.py  test_molecule_manipulation.py  test_operations.py  test_operations_hydrogen_completion.py  test_operations_hydrogenation.py  test_operations_rotation.py  test_packing_shell.py  test_path_smoothing.py  test_pi_stacking_geometry.py  test_polyhedra.py  test_primitive_reduction.py  test_reorientation.py  test_sanity_check.py  (+14 more)
(+35 files in other folders)
