[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "molcrys-kit"
version = "0.1.0"
description = "Molecular Crystal Toolkit"
authors = [
    {name = "MolCrysKit Development Team", email = "none@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.18.0",
    "scipy>=1.4.0",
    "networkx>=2.5.0",
]

[project.optional-dependencies]
io = ["pymatgen>=2020.0.0"]
vis = ["nglview", "py3Dmol"]
test = ["pytest>=6.0.0"]

[project.urls]
Homepage = "https://github.com/SchrodingersCattt/MolCrysKit"
Repository = "https://github.com/SchrodingersCattt/MolCrysKit"

[tool.setuptools.packages.find]
where = ["."]
include = ["molcrys*"]

[tool.setuptools.package-data]
"molcrys.constants" = ["*.json"]