[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "molcrys-kit"
dynamic = ["version"]
description = "Molecular Crystal Toolkit"
authors = [
    {name = "MolCrysKit Development Team", email = "none@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.18.0",
    "scipy>=1.4.0",
    "networkx>=2.5.0",
    "ase>=3.26.0",
    "pymatgen>=2020.0.0",
    "click>=8.0,<9",
]

[project.scripts]
mck = "molcrys_kit.cli:main"

[project.optional-dependencies]
vis = ["nglview", "py3Dmol"]
test = ["pytest>=6.0.0", "pytest-cov"]
dev = [
    "molcrys-kit[test,vis]",
    "build",
    "ruff>=0.15",
    "pre-commit",
    "nbstripout",
    "twine",
]

[project.urls]
Homepage = "https://github.com/SchrodingersCattt/MolCrysKit"
Repository = "https://github.com/SchrodingersCattt/MolCrysKit"

[tool.setuptools.packages.find]
where = ["."]
include = ["molcrys*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
molcrys_kit = ["constants/*.json"]

[tool.setuptools_scm]
write_to = "molcrys_kit/_version.py"
local_scheme = "no-local-version"
fallback_version = "0.0.0+unknown"

[tool.pytest.ini_options]
addopts = "--cov=molcrys_kit --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = [
    "scripts/*",
    "tests/*",
    "molcrys_kit/io/output.py",
    "molcrys_kit/_version.py",
]
